@@ -1,3 +1,8 @@
+2008-01-10  Zach Lute <zach.lute@gmail.com>
+
+	* MonoDevelop.Projects.Gui.Completion/ListWindow.cs: Scrollbar adjustment is
+	  updated even if scrollbar is invisible. (Bug #350973)
+
 2007-12-14  Lluis Sanchez Gual <lluis@novell.com> 
 
 	* MonoDevelop.Projects.Gui.Completion/CompletionListWindow.cs: Don't process
